--- a/html/about.html
+++ b/html/about.html
@@ -1,4 +1,4 @@
-<!--Walter Iverson 4/6/2022-->
+<!--Walter Iverson 4/16/2022-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -6,21 +6,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Clean Blog - Start Bootstrap Theme</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <title>Walter Iverson - About</title>
+        <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="../Styles/styles.css" rel="stylesheet" />
+        <link href="../Styles/bootstyles.css" rel="stylesheet" />
         <link href="../Styles/mystyles.css" rel="stylesheet" />
     </head>
     <body>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand" href="../index.html">Walter Iverson</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -35,13 +37,13 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('assets/img/about-bg.jpg')">
+        <header class="masthead" style="background-image: url('../Images/IMG_0972.jpg')" alt = "Walter in the Mountains">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
                             <h1>About Me</h1>
-                            <span class="subheading">This is what I do.</span>
+                            <span class="subheading">This is who I am.</span>
                         </div>
                     </div>
                 </div>
@@ -52,9 +54,111 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+                       <h2> <p><div class="underline"> Resume</div></p></h2>
+                       <ul>
+                        <li><p><h3><li>Contact Information</li></h3></p></li>
+                        <hr class="my-hr-line">
+                            <p><li><div class = "heading">Phone Number</div></li></p>
+                                <ul>
+                                    <li>1(208) 851-1957</li>
+                                </ul>
+                            <p><li><div class = "heading">Email</div></li></p>
+                                <ul>
+                                    <li>wciverson@gmail.com</li>
+                                </ul>
+                           <li><p><h3><li>Education</li></h3></p></li>
+                           <hr class="my-hr-line">
+                                <ul>
+                                    <li>Working on a Bachelors of Science in Biology From<a href= "https://www.byu.edu" My University title="BYU webpage" target= "_blank"> Brigham Young University</a></li>
+                                    <li>High School Diploma From Preston High School</li>
+                                </ul>
+                            <li><p><h3> <li>Work Experience</li></h3></p></li>
+                            <hr class="my-hr-line">
+                                    <p><li><div class="heading">Theater and Arts Department</div></li></p>
+                                        <ul>
+                                            <li><p><ul><div class = "subheading">Stage Manager</div></ul></p></li>
+                                        </ul>
+                                            <ul>
+                                                <ol>
+                                                    <li>Responsible for directing multiple Theaters, Performers, and Audiences during performance</li>
+                                                    <li>Set up, Take down, Organization and Storage of Machinery and expensive set pieces for the Theater</li>
+                                                    <li>Directing Patrons to key destinations</li>
+                                                </ol>
+                                            </ul>
+                                    <p><li><div class="heading">Preston Dental Care</div></li></p>
+                                        <ul>     
+                                            <li><p><ul><div class = "subheading">Dental Assistant</div></ul></p></li>
+                                        </ul> 
+                                            <ul>
+                                                <ol>
+                                                    <li>Assisted the Dentist during various surgeries and procedures</li>
+                                                    <li>Cared for patients throughout appointment</li>
+                                                </ol>
+                                            </ul>
+                                    <p><li><div class="heading">Iverson Farms</div></li></p>
+                                        <ul>
+                                            <li><p><ul><div class = "subheading">Laborer</div></ul></p></li>
+                                        </ul>
+                                            <ul>
+                                                <ol>
+                                                    <li>Nourishment and care for livestock</li>
+                                                    <li>Operated heavy machinery to accomplish mandatory contracts</li>
+                                                    <li>Routine Daily Inspection of livestock and property</li>
+                                                    <li>Manual Labor in countless venues and varieties</li>
+                                                    <li>Found Solutions to problems</li>
+                                                </ol>
+                                            </ul>
+                            <li><p><h3> <li>Leadership and Service</li></h3></p></li>
+                            <hr class="my-hr-line">
+                            <li><p><h3> <li></li></h3></p></li>
+                                    <p><li><div class="heading">The Church of Jesus Christ of Latter-day Saints</div></li></p>
+                                        <ul>
+                                            <li><p><ul><div class = "subheading">Volunteer Representative </div></ul></p></li>
+                                        </ul>
+                                            <ul>
+                                                <ol>
+                                                    <li>Helped individuals come to Jesus Christ</li>
+                                                    <li>Served in leadership roles to aid in progress of individual Representatives</li>
+                                                </ol>
+                                            </ul>
+                                            <li><p><h3> <li></li></h3></p></li>
+                                    <p><li><div class="heading">The Church of Jesus Christ of Latter-day Saints</div></li></p>
+                                        <ul>
+                                            <li><p><ul><div class = "subheading">Volunteer Representative </div></ul></p></li>
+                                        </ul>
+                                            <ul>
+                                                <ol>
+                                                    <li>Coordinated use and maintenance of 100+ vehicles for more than 9 months</li>
+                                                    <li>Served in crucial leadership capacities to train and bless 280+ other Representatives</li>
+                                                    <li>Discovered how to display various data to demonstrate possible training and focuses</li>
+                                                    <li>Assisted individuals in journey to Jesus Christ</li>
+                                                </ol>
+                                            </ul>
+                                            <li><p><h3> <li></li></h3></p></li>
+                                    <p><li><div class="heading">National Honor Society</div></li></p>
+                                        <ul>
+                                            <li><p><ul><div class = "subheading">Loyal and Dedicated Member</div></ul></p></li>
+                                        </ul>
+                                            <ul>
+                                                <ol>
+                                                    <li>Supported the organization, promotion, and participation in a vast assortment of service activities</li>
+                                                </ol>
+                                            </ul>
+                            <li><p><h3> <li>Awards, Skills, & Interests</li></h3></p></li>
+                            <hr class="my-hr-line">
+                            <li><p><h3> <li></li></h3></p></li>
+                                        </ul>
+                                            <ul>
+                                                <ol>
+                                                    <li>Spanish: proficient fluency</li>
+                                                    <li>Eagle Scout, Boy Scouts of America</li>
+                                                    <li>Certified to perform CPR multiply times</li>
+                                                    <li>Received awards for leadership and hard work</li>
+                                                    <li>Captain of assorted sports teams</li>
+                                                </ol>
+                                            </ul>
+                        </ul>
+                        <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="about.html">Back to Top →</a></div>
                     </div>
                 </div>
             </div>
@@ -64,7 +168,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <ul class="list-inline text-center">
+                        <!-- <ul class="list-inline text-center">
                             <li class="list-inline-item">
                                 <a href="#!">
                                     <span class="fa-stack fa-lg">
@@ -89,8 +193,8 @@
                                     </span>
                                 </a>
                             </li>
-                        </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2022</div>
+                        </ul> -->
+                        <div class="small text-center text-muted fst-italic">Copyright &copy; Walter Iverson 2022</div>
                     </div>
                 </div>
             </div>
